--- a/index.html
+++ b/index.html
@@ -1,20 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
+	<meta charset="utf-8">
 	<title> Meu primeiro site! </title>
 </head>
 <body>
-	<a href="newpage.html">Nova Página</a>
-	<a href="register.html">Registrar</a>
+	<header>
+		<h1>Minha primeira página!</h1>
+	</header>
+	<nav>
+		<a href="newpage.html">Nova Página</a>
+		<a href="register.html">Registrar</a>
+	</nav>
+	<div>
 	<ul>
-		<li>Melancia<li>
+		<li>Melancia</li>
 		<li>Pêssego</li>
 		<li>Maçã
 			<ul>
-				<li>Fuji</li><hr>
+				<li>Fuji<hr>
 				<img src="pngtree-fuji-apple-png-clipart_2226543.jpg" alt="Maçã Fuji" height="50" width="50">
+				</li>
 			</ul>
 		</li>
 	</ul>
+	</div>
+	<footer>
+		<p>Site feito com amor!</p>
+	</footer>
 </body>
 </html>
