--- a/newpage.html
+++ b/newpage.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
+	<meta charset="utf-8">
 	<title>Nova Pagina</title>
 </head>
 <body>
-	<h1>Nova Pagina<h1>
-	<a href="index.html">
-		<h2>Voltar</h2>
-	<a/>
-	<a href="register">
-		<h2>Registrar</h2>
-	</a>
+	<header>
+		<h1>Nova Pagina</h1>
+	</header>
+	<nav>
+		<a href="index.html">
+			<h2>Voltar</h2>
+		</a>
+		<a href="register">
+			<h2>Registrar</h2>
+		</a>
+	</nav>
+	<footer>
+		<p>Site feito com amor!</p>
+	</footer>
 </body>
 </html>
