--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 		<h1>Minha primeira página!</h1>
 	</header>
 	<nav>
-		<a href="newpage.html">Nova Página</a>
+		<a href="payment.html">Pagamento e entrega</a>
 		<a href="register.html">Registrar</a>
+		<a href="#footer">Ir ao final da página</a>
 	</nav>
-	<div>
+	<main>
+	<p>Seja bem vindo!</p>
 	<ul>
 		<li>Melancia</li>
 		<li>Pêssego</li>
@@ -24,9 +26,9 @@
 			</ul>
 		</li>
 	</ul>
-	</div>
+	</main>
 	<footer>
-		<p>Site feito com amor!</p>
+		<p id="footer">Site feito com amor!</p>
 	</footer>
 </body>
 </html>
