--- a/register.html
+++ b/register.html
@@ -12,17 +12,17 @@
 		<ul>
 			<li>
 				<a href="index.html">
-					<h2>Voltar para inicio</h2>
+					<h2>Home</h2>
 				</a>
 			</li>
 			<li>
-				<a href="newpage">
-					<h2>Ir para nova pagina</h2>
+				<a href="payment.html">
+					<h2>Ir para pagamento e entrega</h2>
 				</a>
 			</li>
 		</ul>
 	</nav>
-	<div>
+	<main>
 		<form action="cadastrar" method="POST">
 			<fieldset>
 				<legend>Cadastro</legend>
@@ -57,11 +57,12 @@
 						<option value="volkswagen" id="volkswagen">Volkswagen</option>
 						<option value="renault" id="renault">Renault</option>
 					</optgroup>
-				</select>
+				</select><br>
+				<input type="checkbox" name="termo" id="idtermo">Eu aceito os termos e condições<br>
 				<input type="submit" value="Registrar!"> <input type="reset" value="Apagar">
 			</fieldset>
 		</form>
-	</div>
+	</main>
 	<footer>
 		<p>Site feito com amor!!!</p>
 	</footer>
